@@ -1,3 +1,8 @@
+2003-10-30  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/comma_list.h: is_set() new member
+	* libpp/profile_spec.cpp: fix matching logic for cpu/tid/tgid
+
 2003-10-30  John Levon  <levon@movementarian.org>
 
 	* libutil++/generic_spec.h: add value() and
